<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/contact_info"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_woman"
                    android:drawableStart="@drawable/ic_woman"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_margin="1dp"
                    android:layout_height="0.3dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100sp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_info_rv" />
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/basic_info"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_woman"
                    android:drawableStart="@drawable/ic_woman"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_margin="1dp"
                    android:layout_height="0.3dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100sp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/basic_info_rv" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/interested_info"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_woman"
                    android:drawableStart="@drawable/ic_woman"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_margin="1dp"
                    android:layout_height="0.3dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100sp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/interested_info_rv" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_text"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/religious_info"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/ic_woman"
                    android:drawableStart="@drawable/ic_woman"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_margin="1dp"
                    android:layout_height="0.3dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100sp"
                    android:background="@android:color/black" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/religious_info_rv" />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="@style/App_ButtonStyle"
            android:text="@android:string/cancel"
            android:id="@+id/cancel_button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="@style/App_ButtonStyle"
            android:text="@string/submit"
            android:id="@+id/submit_button"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>